--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,80 @@
+*{
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+}
+@font-face {
+    font-family: 'Inter';
+    src: url('.././assets/font/Inter-VariableFont_slnt\,wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+h1{
+    margin-top: 60px;
+    font-size: 40px;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+.altura{
+    margin-top: 32px;
+}
+input{
+    background: #F6F6F6;
+
+}
+input::placeholder {
+    text-indent: 16px;
+    font-weight: bolder;
+    color: #B3B3B3;
+
+}
+input[type="number"],
+input[type="text"]{
+    width: 343px;
+    height: 50px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+    border: none;
+}
+button{
+    width: 343px;
+    height: 50px;
+    border-radius: 30px;
+    font-weight: bolder;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.form-button{
+    background-color:#45FEFE;
+    margin-top: 26px;
+    border: none;
+}
+input[type="checkbox"]{
+    margin-top: 22px;
+}
+.second-button{
+    margin-top: 16px;
+    background-color: white;
+    border: 4px solid #45FEFE;
+}
 .flex {
     display: flex;
+    flex-direction: column;
+    background-color: white;
+    text-align: center;
+    align-items: center;
 }
 
 .flex-row {
     flex-direction: row;
+    border: 2px solid blue;
+
 }
 
 .input-text {
